--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/suite-landing-page/assets/my_favicon.f7b2e06b.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Suite landing page</title>
   <script type="module" crossorigin src="/suite-landing-page/assets/index.195675c0.js"></script>
   <link rel="stylesheet" href="/suite-landing-page/assets/index.f396ea8d.css">
 </head>
